--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -15,4 +15,4 @@
 <!-- Example Google Maps Link -->
 <h3>This is where you need to go:</h3>
 
-<a href="https://www.google.com/maps/place/7310+Vista+Ridge+Ln,+Sachse,+TX+75048/@32.9878635,-96.5695338,17z/data=!3m1!4b1!4m6!3m5!1s0x864c035a887003cb:0x644c52d58b53dfdd!8m2!3d32.987859!4d-96.5669589!16s%2Fg%2F11c13nl26l?entry=ttu"> Google map link</a>
+<a href="https://www.google.com/maps/> Google map link</a>
